kubernetes/apps/media/prismedia/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prismedia
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: prismedia
  ports:
    - port: 8008
      targetPort: 8008
