kubernetes/apps/media/prismedia/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prismedia
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: prismedia.homelab.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prismedia
                port:
                  number: 8008
